# ADAM

./: .gitignore  Cargo.toml  README.md
.agents/: setup
.github/workflows/: ci.yml
analysis/: README.md  epoch_utility.py  freq_attack.py  mitigation.py  ngram_cost.py  op_distribution.py  sketch_compression.py
crates/hss-bench/: Cargo.toml  README.md
crates/hss-bench/benches/: primitives.rs
crates/hss-bench/src/: lib.rs  main.rs
crates/khprf-bench/: Cargo.toml
crates/khprf-bench/src/: main.rs
crates/oprf-eval/: Cargo.toml
crates/oprf-eval/src/: lib.rs  main.rs
crates/ve-circuit/: Cargo.toml
crates/ve-circuit/program/: Cargo.toml
crates/ve-circuit/program/src/: main.rs
crates/ve-circuit/src/: lib.rs  main.rs
crates/ve-circuit/types/: Cargo.toml
crates/ve-circuit/types/src/: lib.rs
docs/: ARCHITECTURE.md
results/: RESULTS.md
