[package]
name = "hss-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
rayon = "1"
rug = { version = "1.28", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "primitives"
harness = false
