[package]
name = "khprf-bench"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
curve25519-dalek = { version = "4", features = ["digest", "rand_core"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
