[package]
name = "ve-circuit-types"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bincode = "1"
k256 = { version = "0.13.4", features = ["ecdsa"] }
rand_chacha = "0.3"
rand_core = "0.6"
rsa = { version = "=0.9.6", features = ["sha2"] }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.8"

[dev-dependencies]
hex = "0.4"
rand = "0.8"
